[gd_scene load_steps=16 format=2]

[ext_resource path="res://characters/playable/hunter/hunter.gd" type="Script" id=1]
[ext_resource path="res://lib/physics/JumpPhysics.gd" type="Script" id=2]
[ext_resource path="res://lib/physics/Jump.gd" type="Script" id=3]
[ext_resource path="res://lib/states/states.gd" type="Script" id=4]
[ext_resource path="res://characters/playable/states/idle.gd" type="Script" id=5]
[ext_resource path="res://characters/playable/states/run.gd" type="Script" id=6]
[ext_resource path="res://characters/playable/states/jump.gd" type="Script" id=7]
[ext_resource path="res://characters/playable/states/fall.gd" type="Script" id=8]
[ext_resource path="res://characters/playable/states/wall_kick.gd" type="Script" id=9]
[ext_resource path="res://characters/playable/states/reload.gd" type="Script" id=10]
[ext_resource path="res://characters/playable/states/hit.gd" type="Script" id=11]
[ext_resource path="res://characters/playable/states/open_item_box.gd" type="Script" id=12]
[ext_resource path="res://characters/playable/hunter/gun.tscn" type="PackedScene" id=13]
[ext_resource path="res://characters/playable/hunter/sprites.tscn" type="PackedScene" id=14]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0

[node name="hunter" type="KinematicBody2D"]
collision_layer = 6
script = ExtResource( 1 )

[node name="jump_physics" type="Node" parent="."]
script = ExtResource( 2 )

[node name="jump" type="Node" parent="jump_physics"]
script = ExtResource( 3 )
run_speedo = 110.0
jump_height = 64.0
total_distance = 118.0
peak_point_t = 0.4

[node name="states" type="Node" parent="."]
script = ExtResource( 4 )
visual_log = true

[node name="idle" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="run" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="jump" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="fall" type="Node" parent="states"]
script = ExtResource( 8 )

[node name="wall_kick" type="Node" parent="states"]
script = ExtResource( 9 )

[node name="reload" type="Node" parent="states"]
script = ExtResource( 10 )

[node name="hit" type="Node" parent="states"]
script = ExtResource( 11 )

[node name="open_item_box" type="Node" parent="states"]
script = ExtResource( 12 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -18 )
shape = SubResource( 1 )

[node name="left_ground_cast" type="RayCast2D" parent="."]
position = Vector2( -6, -3 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="right_ground_cast" type="RayCast2D" parent="."]
position = Vector2( 6, -3 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="wall_kick_cast" type="RayCast2D" parent="."]
position = Vector2( 0, -5 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="gun" parent="." instance=ExtResource( 13 )]

[node name="sprites" parent="." instance=ExtResource( 14 )]

[node name="talk" type="Position2D" parent="."]
position = Vector2( 3, -43 )

